Saving the webhook in options and sending custom message

--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,10 @@
     "manifest_version": 3,
     "action": {
         "default_popup": "index.html"
-    }
+    },
+    "permissions": [
+        "storage"
+      ],
+
+    "options_page": "options.html"
 }
