--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,9 @@
         "storage"
       ],
     "icons": { 
-        "16": "icon16.png",
-        "48": "icon64.png",
-        "128": "icon128.png" 
+        "16": "assets/icon16.png",
+        "48": "assets/icon64.png",
+        "128": "assets/icon128.png" 
     },
     "options_page": "options.html"
 }
